--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Project</title>
     </head>
     <body>
-        
+        <div id="menu-list"></div>
+        <script type="text/javascript" src="index.js"></script>  
     </body>
 </html>
