--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     </head>
     <body>
         <div id="menu-list"></div>
+        <div id="order-list"></div>
+        <div id="check-out">
+            <h4 id="total-cost">$0.00</h4>
+        </div>
         <script type="text/javascript" src="index.js"></script>  
     </body>
 </html>
