added title text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Project</title>
     </head>
     <body>
+        <div id="restaurant-name">
+            <h1>FS Pizza</h1>
+        </div>
         <div id="menu-list"></div>
         <div id="order-list"></div>
         <div id="check-out">
