--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Project</title>
+        <title>FS Pizza</title>
     </head>
     <body>
         <div id="restaurant-name">
@@ -14,6 +14,10 @@
         <div id="order-list"></div>
         <div id="check-out">
             <h4 id="total-cost">$0.00</h4>
+            <form class="check-out">
+                <input type="text" name="name" value="" placeholder="Enter your name..." class="input-text"/>
+                <input type="submit" name="submit" value="Place Order" class="submit">
+            </form>
         </div>
         <link rel="stylesheet" href="index.css" />
         <script type="text/javascript" src="index.js"></script>  
