display checked toppings on order list

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
         <div id="restaurant-name">
             <h1>FS Pizza</h1>
         </div>
-        <div id="menu-list"></div>
-        <div id="order-list"></div>
-        <div id="check-out">
-            <h4 id="total-cost">$0.00</h4>
-            <form class="check-out">
-                <input type="text" name="name" value="" placeholder="Enter your name..." class="input-text"/>
-                <input type="submit" name="submit" value="Place Order" class="submit">
-            </form>
+        <div id="boxes">
+            <div id="menu-list"></div>
+            <div id="order-list"></div>
+            <div id="check-out">
+                <h4 id="total-cost">$0.00</h4>
+                <form class="check-out">
+                    <input type="text" name="name" value="" placeholder="Enter your name..." class="input-text"/>
+                    <input type="submit" name="submit" value="Place Order" class="submit">
+                </form>
+            </div>
         </div>
         <link rel="stylesheet" href="index.css" />
         <script type="text/javascript" src="index.js"></script>  
