cleared the order after placing it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="check-out">
                 <h4 id="total-cost">$0.00</h4>
                 <form class="check-out">
-                    <input type="text" name="name" value="" placeholder="Enter your name..." class="input-text"/>
+                    <input type="text" name="customer" value="" placeholder="Enter your name..." class="input-text"/>
                     <input type="submit" name="submit" value="Place Order" class="submit">
                 </form>
             </div>
